# mhacks15

./: .gitignore  README.md  package.json  tailwind.config.js
backend/: main.py  pyproject.toml
components/: card.tsx  cardDoctor.tsx  cardMedicine.tsx  cardPatient.tsx  hero.tsx  layout.tsx  nav.tsx  navelement.tsx
pages/: _app.tsx  _document.tsx  beds.tsx  doctors.tsx  index.tsx  medicine.tsx  settings.tsx
