[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend api for invntry"
authors = ["zubairmh <zubair.mh@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
