[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend api for invntry"
authors = ["zubairmh <zubair.mh@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pymongo = "^4.3.3"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
